syntax = "proto3";

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package io.aggregator.api;

option java_outer_classname = "SubSecondApi";

service SubSecond {
  option (akkaserverless.codegen) = {
    event_sourced_entity: {
      name: "io.aggregator.entity.SubSecond"
      entity_type: "sub_second"
      state: "io.aggregator.entity.SubSecondState"
      events: [
        "io.aggregator.entity.SubSecondActivated",
        "io.aggregator.entity.SubSecondLedgerItemsAdded",
        "io.aggregator.entity.SubSecondAggregated"
      ]
    }
  };

  rpc AddLedgerItems(AddLedgerItemsCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/sub_second/add-ledger-items"
      body: "*"
    };
  }

  rpc AggregateSubSecond(AggregateSubSecondCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/sub_second/aggregate"
      body: "*"
    };
  }
}

message AddLedgerItemsCommand {
  string merchant_id = 1 [(akkaserverless.field).entity_key = true];
  int64 epoch_sub_second = 2 [(akkaserverless.field).entity_key = true];
  string transaction_id = 3;
  google.protobuf.Timestamp timestamp = 4;
  repeated LedgerItem ledger_item = 5;
}

message LedgerItem {
  string service_code = 1 [(akkaserverless.field).entity_key = true];
  string account_from = 2 [(akkaserverless.field).entity_key = true];
  string account_to = 3 [(akkaserverless.field).entity_key = true];
  double amount = 4;
}

message AggregateSubSecondCommand {
  string merchant_id = 1 [(akkaserverless.field).entity_key = true];
  int64 epoch_sub_second = 2 [(akkaserverless.field).entity_key = true];
  google.protobuf.Timestamp aggregate_request_timestamp = 3;
  string payment_id = 4;
}
